# AOC2022

./: AOC2022.cabal  output
app/: Utils.hs  day_1.hs  day_10.hs  day_11.hs  day_12.hs  day_13.hs  day_14.hs  day_15.hs  day_2.hs  day_3.hs  day_4.hs  day_5.hs  day_6.hs  day_7.hs  day_8.hs  day_9.hs
day_1/: main.hs
day_2/: main.hs
day_3/: main.hs
day_4/: main.hs
day_5/: main.hs
day_6/: main.hs
