cabal-version:      2.4
name:               AOC2022
version:            0.9.0.0

author:             rndm

extra-source-files: CHANGELOG.md

executable day_1
    main-is:          day_1.hs
    ghc-options:      -threaded
    build-depends:    base ^>=4.15.1.0, 
                      split
    hs-source-dirs:   app
    default-language: Haskell2010

executable day_2
    main-is:          day_2.hs
    ghc-options:      -threaded
    build-depends:    base ^>=4.15.1.0,
                      extra
    hs-source-dirs:   app
    default-language: Haskell2010
    

executable day_3
    main-is:          day_3.hs
    ghc-options:      -threaded
    build-depends:    base ^>=4.15.1.0,
                      extra
    hs-source-dirs:   app
    default-language: Haskell2010


executable day_4
    main-is:          day_4.hs
    ghc-options:      -threaded
    other-modules:    Utils
    build-depends:    base ^>=4.15.1.0,
                      extra, split
    hs-source-dirs:   app
    default-language: Haskell2010


executable day_5
    main-is:          day_5.hs
    ghc-options:      -threaded
    other-modules:    Utils
    build-depends:    base ^>=4.15.1.0, 
                      split, 
                      lens,
                      template-haskell
    hs-source-dirs:   app
    default-language: Haskell2010


executable day_6
    main-is:          day_6.hs
    ghc-options:      -threaded
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable day_7
    main-is:          day_7.hs
    ghc-options:      -threaded
    other-modules:    Utils
    build-depends:    base ^>=4.15.1.0, 
                      split, 
                      lens,
                      template-haskell,
                      containers
    hs-source-dirs:   app
    default-language: Haskell2010

executable day_8
    main-is:          day_8.hs
    ghc-options:      -threaded
    other-modules:    Utils
    build-depends:    base ^>=4.15.1.0, 
                      template-haskell,
    hs-source-dirs:   app
    default-language: Haskell2010

executable day_9
    main-is:          day_9.hs
    ghc-options:      -threaded
    other-modules:    Utils
    build-depends:    base ^>=4.15.1.0, 
                      template-haskell,
                      lens,
                      containers,
    hs-source-dirs:   app
    default-language: Haskell2010
